# thodd-cpp-functional

./: CMakeLists.txt  README.md
include/: functional.hpp  functor.hpp  member.hpp  new.hpp  statement.hpp  until.hpp  val.hpp  while.hpp
include/thodd/: functional.hpp
include/thodd/functional/: always.hpp  bind.hpp  cast.hpp  compose.hpp  cref.hpp  delete.hpp  demux.hpp  fix.hpp  functional.hpp  functor.hpp  id.hpp  if.hpp  member.hpp  new.hpp  nothing.hpp  on.hpp  operators.hpp  partial.hpp  placeholder.hpp  ref.hpp  rpartial.hpp  statement.hpp  statements.hpp  switch.hpp  tern.hpp  tuple.hpp  until.hpp  val.hpp  while.hpp
